--- a/force-app/test/default/classes/SummitEventsAddToCalendar_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsAddToCalendar_TEST.cls
@@ -117,8 +117,7 @@ public class SummitEventsAddToCalendar_TEST {
             Test.setCurrentPage(pageRef);
             SummitEventsAddToCalendarController calendarController = new SummitEventsAddToCalendarController();
 
-            SummitEventsShared SEShared = new SummitEventsShared();
-            String timezoneString = SEShared.getTimeZonePick(seaTestInstances[1].Instance_Time_Zone__c);
+            String timezoneString = SummitEventsShared.getTimeZonePick(seaTestInstances[1].Instance_Time_Zone__c);
             TimeZone tz = TimeZone.getTimeZone(timezoneString);
             Date startD = seaTestInstances[1].Instance_Start_Date__c;
             Time startT = seaTestInstances[1].Instance_Start_Time__c;
