added check for event closed on cancel page

--- a/force-app/main/default/classes/SummitEventsCancelReviewController.cls
+++ b/force-app/main/default/classes/SummitEventsCancelReviewController.cls
@@ -110,4 +110,8 @@ public with sharing class SummitEventsCancelReviewController {
 
     }
 
+    public PageReference checkEventDetails() {
+        return SummitEventsShared.checkForEvent('cancel');
+    }
+
 }
